--- a/css portfolio.css
+++ b/css portfolio.css
@@ -150,7 +150,11 @@ main{
     margin-bottom: 1px;
 }
 
-@media ( width >= 610px){}
+@media ( width >= 610px){
+    .nav_items{
+        display: none;
+    }
+}
 
 @media ( 365px <= width <= 610px){
     .grid-item6{
@@ -165,9 +169,43 @@ main{
     #numeroygmail{
         font-size: 65%;
     }
+    .nav_items{
+        background-color: rgb(228, 228, 228);
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        margin-left: 20px;
+        margin-top: 10px;
+        transform: translateX(-120%);
+    }
+    .nav_toggle{
+        display: flex !important;
+        flex-direction: column;
+        align-items: left;
+        margin-left: 20px;
+    }
+    .nav_toggle span{
+        width: 20px;
+        height: 3px;
+        margin: 1px;
+        background-color: rgb(255, 255, 255);
+        border-radius: 5px;
+    }
+    .close span{
+        transform: rotate(45deg) translate(0px, 0px);
+    }
+    .close span:nth-child(1){
+        display: none;
+    }
+    .close span:nth-child(2){
+        transform: rotate(-45deg) translate(-5px, 1px);
+    }
+    .open{ 
+        transform: translateX(0) !important;
+    }
 }
 
-@media ( 0px <= width <= 365px) {
+@media ( 10px <= width <= 365px) {
     .grid-item6{
         display: none;
     }
@@ -175,6 +213,48 @@ main{
         display: none;
     }
     #avatar{
-        width: 150px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
+    main{
+        display: flex;
+        flex-direction: column;
+    }
+    #numeroygmail{
+        font-size: 65%;
+    }
+    .nav_items{
+        background-color: rgb(228, 228, 228);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+        transform: translateX(-120%);
+    }
+    .nav_toggle{
+        display: flex !important;
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav_toggle span{
+        width: 20px;
+        height: 3px;
+        margin: 1px;
+        background-color: rgb(255, 255, 255);
+        border-radius: 5px;
+    }
+    .close span{
+        transform: rotate(45deg) translate(0px, 0px);
+    }
+    .close span:nth-child(1){
+        display: none;
+    }
+    .close span:nth-child(2){
+        transform: rotate(-45deg) translate(-5px, 1px);
+    }
+    .open{ 
+        transform: translateX(0) !important;
     }
 }
