--- a/css portfolio.css
+++ b/css portfolio.css
@@ -170,6 +170,7 @@ main{
         font-size: 65%;
     }
     .nav_items{
+        font-family: 'Bacasime Antique', serif;
         background-color: rgb(228, 228, 228);
         display: flex;
         flex-direction: column;
@@ -190,6 +191,7 @@ main{
         margin: 1px;
         background-color: rgb(255, 255, 255);
         border-radius: 5px;
+        cursor: pointer;
     }
     .close span{
         transform: rotate(45deg) translate(0px, 0px);
@@ -226,6 +228,7 @@ main{
         font-size: 65%;
     }
     .nav_items{
+        font-family: 'Bacasime Antique', serif;
         background-color: rgb(228, 228, 228);
         display: flex;
         flex-direction: column;
@@ -244,6 +247,7 @@ main{
         margin: 1px;
         background-color: rgb(255, 255, 255);
         border-radius: 5px;
+        cursor: pointer;
     }
     .close span{
         transform: rotate(45deg) translate(0px, 0px);
